# daily-notes

./: CLAUDE.md  pyproject.toml  test_cli.py  test_config.py
daily_notes/: cli.py  config.py
